--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Daniel Pozo Fernández | Portfolio</title>
+    <title>Daniel Pozo Fernández | Portfolio personal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="" name="Daniel Pozo Fernández">
     <meta content="" name="Full Stack junior developer">
